--- a/TestUdpReceiver/TestUdpReceiver.vcxproj
+++ b/TestUdpReceiver/TestUdpReceiver.vcxproj
@@ -49,7 +49,7 @@
       <PrecompiledHeader>Use</PrecompiledHeader>
       <WarningLevel>Level3</WarningLevel>
       <Optimization>Disabled</Optimization>
-      <PreprocessorDefinitions>WIN32;_WINDOWS;_DEBUG;%(PreprocessorDefinitions)</PreprocessorDefinitions>
+      <PreprocessorDefinitions>WIN32;_WINDOWS;_DEBUG;HAVE_GETSYSTEMTIMEASFILETIME;_CRT_SECURE_NO_WARNINGS;%(PreprocessorDefinitions)</PreprocessorDefinitions>
       <SDLCheck>true</SDLCheck>
     </ClCompile>
     <Link>
@@ -74,7 +74,7 @@
       <Optimization>MaxSpeed</Optimization>
       <FunctionLevelLinking>true</FunctionLevelLinking>
       <IntrinsicFunctions>true</IntrinsicFunctions>
-      <PreprocessorDefinitions>WIN32;_WINDOWS;NDEBUG;%(PreprocessorDefinitions)</PreprocessorDefinitions>
+      <PreprocessorDefinitions>WIN32;_WINDOWS;NDEBUG;HAVE_GETSYSTEMTIMEASFILETIME;_CRT_SECURE_NO_WARNINGS;%(PreprocessorDefinitions)</PreprocessorDefinitions>
       <SDLCheck>true</SDLCheck>
     </ClCompile>
     <Link>
@@ -98,6 +98,7 @@
     <Text Include="ReadMe.txt" />
   </ItemGroup>
   <ItemGroup>
+    <ClInclude Include="BufSource.h" />
     <ClInclude Include="IOCompletionPortCenter.h" />
     <ClInclude Include="DataObserver.h" />
     <ClInclude Include="FileWriter.h" />
@@ -106,9 +107,13 @@
     <ClInclude Include="IOReq.h" />
     <ClInclude Include="NoLockBiList.h" />
     <ClInclude Include="NoLockBiListNode.h" />
+    <ClInclude Include="ObjectAllocater.h" />
     <ClInclude Include="Resource.h" />
+    <ClInclude Include="RtspServer.h" />
     <ClInclude Include="stdafx.h" />
     <ClInclude Include="targetver.h" />
+    <ClInclude Include="TcpConnecter.h" />
+    <ClInclude Include="TcpConnecterIOReq.h" />
     <ClInclude Include="TcpListenerBase.h" />
     <ClInclude Include="TcpListenerIOReq.h" />
     <ClInclude Include="TcpListener.h" />
@@ -118,17 +123,22 @@
     <ClInclude Include="TestUdpReceiverDlg.h" />
     <ClInclude Include="UdpReceiver.h" />
     <ClInclude Include="UdpReceiverIOReq.h" />
+    <ClInclude Include="utils.h" />
   </ItemGroup>
   <ItemGroup>
+    <ClCompile Include="ffutils.cpp" />
     <ClCompile Include="IOCompletionPortCenter.cpp" />
     <ClCompile Include="FileWriter.cpp" />
     <ClCompile Include="FileWriterIOReq.cpp" />
     <ClCompile Include="IOCompletionPortBase.cpp" />
     <ClCompile Include="IOReq.cpp" />
+    <ClCompile Include="RtspServer.cpp" />
     <ClCompile Include="stdafx.cpp">
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">Create</PrecompiledHeader>
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Release|Win32'">Create</PrecompiledHeader>
     </ClCompile>
+    <ClCompile Include="TcpConnecter.cpp" />
+    <ClCompile Include="TcpConnecterIOReq.cpp" />
     <ClCompile Include="TcpListenerBase.cpp" />
     <ClCompile Include="TcpListenerIOReq.cpp" />
     <ClCompile Include="TcpWorkerIOReq.cpp" />
